# PROJ2

./: .gitignore  AGENT.md  Makefile  README.md  buker_nifty_flip.py  environment.yml  pyproject.toml
config/: brain_extraction_benchmark_10.txt
configs/: thrombin_03_esr3p_v1.json
deprecated/: README.md
derivatives/: README.md
docs/: atlas_mapping.md  brain_extraction.md  brain_segmentation.md  current_state.md  demo_commands.md  desktop_application.md  development.md  enhancement_quantification.md  nnunet_active_learning.md  pipeline_architecture.md  repo_structure.md  t2_lesion_integration.md  t2_lesion_t1_integration.md
notebooks/: brain_extraction_colab_benchmark.ipynb  brain_extraction_colab_extra_baselines.ipynb  brain_extraction_rs2_refinement_colab.ipynb
reports/: README.md
scripts/: README.md
tests/: README.md  test_analysis_manifest.py  test_app_architecture.py  test_atlas_mapping_persistence.py  test_atlas_mapping_vertical.py  test_brain_extraction_review.py  test_brain_mask_manifest.py  test_brain_mask_postprocess.py  test_brain_mask_refinement.py  test_colab_notebook.py  test_colab_package.py  test_conversion_cli.py  test_desktop_app.py  test_desktop_mvp_preview.py  test_external_viewer.py  test_flash_cohort.py  test_flash_pair.py  test_input_validation.py  test_mask_workflow.py  test_pipeline_status.py  test_project_state.py  test_qc_manifest.py  test_scan_import.py  test_study_database.py  test_study_metadata.py  test_t1_brain_mask.py  test_t1_brain_mask_integration.py  test_t1_brain_mask_release.py  test_t2_inference.py  test_t2_review.py
(+126 files in other folders)
