[project]
name = "lys-bbb"
version = "0.1.0"
description = "Mouse T1 MRI gadolinium-enhancement analysis backend."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "nibabel>=5.2",
  "numpy>=1.26",
  "scipy>=1.11",
  "SimpleITK>=2.3",
]

[project.optional-dependencies]
conversion = ["brkraw==0.5.7"]
brain-refinement = ["scikit-image>=0.23,<1"]
test = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
