[project]
name = "lys-bbb"
version = "0.1.0"
description = "Subject-centred mouse T1 and T2 MRI quantification backend and desktop application."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "nibabel>=5.2",
  "numpy>=1.26",
  "scipy>=1.11",
  "SimpleITK>=2.3",
]

[project.scripts]
lys-bbb-desktop = "lys_bbb_app.main:main"
lys-bbb-t2-infer = "lys_bbb.t2_inference_cli:main"

[project.optional-dependencies]
conversion = ["brkraw==0.5.7"]
brain-refinement = ["scikit-image>=0.23,<1"]
desktop = ["PySide6>=6.7,<7", "brkraw==0.5.7"]
t2-inference = ["torch>=2.2"]
test = ["pytest>=8", "ruff>=0.8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
